# Tic-Hack-Toe

./: Tic-Tac-Toe.cabal  run_jogo_da_velha.sh
src/: Main.hs  TicTacToe.hs
