name:                Tic-Tac-Toe
version:             1.0
description:         Projeto de jogo da velha para Paradigmas de Programacao
author:              Marcelo Tranche Jr & Juliana Goncalves
     
build-type:          Simple
cabal-version:       >=1.10

executable Tic-Tac-Toe
  main-is: Main.hs
  other-modules:       TicTacToe

  build-depends:       base >= 2 && < 5
                     , safe -any
                     , random
                     , MonadRandom
  hs-source-dirs:      src
  default-language:    Haskell2010
  